spacing corrected

--- a/app/assets/stylesheets/components/_projects_information.scss
+++ b/app/assets/stylesheets/components/_projects_information.scss
@@ -12,7 +12,7 @@
   background-color: transparent;
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   left: 0;
   top: 0;
@@ -22,7 +22,6 @@
 
 .slide-img {
   filter: brightness(100%);
-  // height: 93.5%;
   width: calc(100% - 15%);
   object-fit: fill;
   display: block;
